--- a/vijay.html
+++ b/vijay.html
@@ -1,4 +1,9 @@
 <center>
   <h1>vijay</h1>
 </center>
-<hr>
+<hr />
+
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque nobis
+  accusamus, quibusdam odio necessitatibus facilis officia ad eos tempora? Est?
+</p>
